--- a/elice0907/index3.html
+++ b/elice0907/index3.html
@@ -30,7 +30,8 @@
     <article>
       <h2>안녕 난 마리오야</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean maximus, mauris ut tincidunt condimentum, orci nulla
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />
+        Aenean maximus, mauris ut tincidunt condimentum, orci nulla
         congue sapien, sed bibendum mauris ex non metus. In hac habitasse platea dictumst. Praesent efficitur, augue vitae
         gravida vestibulum, quam odio eleifend turpis, ac cursus mauris urna in orci. Class aptent taciti sociosqu ad litora
         torquent per conubia nostra, per inceptos himenaeos. Maecenas hendrerit leo volutpat est tristique, a imperdiet metus
@@ -46,5 +47,19 @@
       <li><img src="./img/thumb-2.png" /></li>
     </ul>
   </main>
+  <section class="join">
+    <h2>가입해 주세요!</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
+      Quam, doloribus modi. Est, reiciendis, fugiat dolore sapiente sunt tempore veritatis praesentium deserunt eos cupiditate necessitatibus doloribus exercitationem labore animi nisi esse?<br />
+      Molestiae laudantium fugit nesciunt dolores eligendi voluptates nemo vel perferendis dolor? Ex nemo architecto numquam harum voluptas doloribus exercitationem reiciendis commodi officiis.
+    </p>
+    <form>
+      <input type="email" name="email" placeholder="이메일을 입력해 주세요" />
+    </form>
+  </section>
+  <footer>
+    <p class="copyright">Copyright Marioclub</p>
+  </footer>
 </body>
 </html>
