--- a/memoproject0919/index.html
+++ b/memoproject0919/index.html
@@ -22,12 +22,14 @@
     <div class="container">
       <header class="text-center text-light my-4">
         <h1 class="mb-4">심플메모</h1>
-        <input
-          class="form-control m-auto"
-          type="text"
-          name="search"
-          placeholder="메모를 검색해보세요"
-        />
+        <form class="search">
+          <input
+            class="form-control m-auto"
+            type="text"
+            name="search"
+            placeholder="메모를 검색해보세요"
+          />
+        </form>
         <!-- 추가로 class명을 추가해서 변경할 수도 있고,
         제공되는 특징에서 특정 부분만 바꾸고 싶으면 css code에서 특정 style만 바꿀 수 있음 -->
       </header>
